--- a/preg.html
+++ b/preg.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title> hii </title>
 	<!-- Meta tags -->
 	<title>Daily Application Form </title>
 	<meta name="keywords" content="General Application Form Responsive widget, Flat Web Templates, Android Compatible web template, 
